Update creditTransactions
