# src/main/java/org/cdpg/dx/aaa/credit/models/CreditTransaction.java
@@ -17,12 +17,12 @@ import static org.cdpg.dx.common.util.ValidationUtils.requireNonNull;
 public record CreditTransaction(
   UUID id,
   UUID userId,
-  String userName,
   Double amount,
   UUID transactedBy,
   String transactionStatus,
   String transactionType,
-  LocalDateTime createdAt
+  LocalDateTime createdAt,
+  LocalDateTime requestedAt
 ) implements BaseEntity<CreditTransaction> {
 
   public static CreditTransaction fromJson(JsonObject json) {
@@ -32,15 +32,15 @@ public record CreditTransaction(
           ? UUID.fromString(json.getString(Constants.CREDIT_TRANSACTION_ID))
           : null,
         UUID.fromString(requireNonNull(json.getString(Constants.USER_ID), Constants.USER_ID)),
-        requireNonNull(json.getString(Constants.USER_NAME),Constants.USER_NAME),
         json.getDouble(Constants.AMOUNT),
         json.containsKey(Constants.TRANSACTED_BY)
           ? UUID.fromString(json.getString(Constants.TRANSACTED_BY))
           : null,
         json.getString(Constants.TRANSACTION_STATUS),
         json.getString(Constants.TRANSACTION_TYPE),
-        parseDateTime(json.getString(Constants.CREATED_AT))
-      );
+        parseDateTime(json.getString(Constants.CREATED_AT)),
+        parseDateTime(json.getString(Constants.REQUESTED_AT))
+        );
     } catch (IllegalArgumentException e) {
       throw new DxValidationException("Missing or invalid field: " + e.getMessage());
     }
@@ -51,7 +51,6 @@ public record CreditTransaction(
     JsonObject json = new JsonObject();
     if (id != null) json.put(Constants.CREDIT_TRANSACTION_ID, id.toString());
     if (userId != null) json.put(Constants.USER_ID, userId.toString());
-    if (userName != null) json.put(Constants.USER_NAME, userName.toString());
 
     if (amount != null) json.put(Constants.AMOUNT, amount);
     if (transactedBy != null) json.put(Constants.TRANSACTED_BY, transactedBy.toString());
@@ -61,6 +60,8 @@ public record CreditTransaction(
       json.put(Constants.TRANSACTION_TYPE, transactionType);
     if (createdAt != null)
       json.put(Constants.CREATED_AT, createdAt.format(FORMATTER));
+    if (requestedAt != null)
+      json.put(Constants.REQUESTED_AT, requestedAt.format(FORMATTER));
     return json;
   }
 
@@ -69,7 +70,6 @@ public record CreditTransaction(
     Map<String, Object> map = new HashMap<>();
     if (id != null) map.put(Constants.CREDIT_TRANSACTION_ID, id.toString());
     if (userId != null) map.put(Constants.USER_ID, userId.toString());
-    if (userName != null) map.put(Constants.USER_NAME, userName.toString());
     if (amount != null) map.put(Constants.AMOUNT, amount);
     if (transactedBy != null) map.put(Constants.TRANSACTED_BY, transactedBy.toString());
     if (transactionStatus != null && !transactionStatus.isEmpty())
@@ -78,6 +78,8 @@ public record CreditTransaction(
       map.put(Constants.TRANSACTION_TYPE, transactionType);
     if (createdAt != null)
       map.put(Constants.CREATED_AT, createdAt.format(FORMATTER));
+    if (requestedAt != null)
+      map.put(Constants.REQUESTED_AT, requestedAt.format(FORMATTER));
     return map;
   }
 
